# dream-team-house

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRESENTATION.md  README.md  SECRETS.md  STATUS.md  TODO-COMPLETED.md  docker-compose.prod.yml  docker-compose.yml  multi_agent_editor_demo_Version2.py
.github/workflows/: ci.yml  deploy-ai-agent.yml  deploy.yml
docs/: tr.md
scripts/: manage-agents.sh
services/ai-agent/: .gitignore  Dockerfile  README.md  TODO.md  package-lock.json  package.json
services/ai-agent/src/: index.js
services/ai-agent/tests/: index.test.js
services/analytics-service/: .gitignore  README.md  requirements.txt
services/analytics-service/app/: database.py  main.py  models.py  schemas.py
services/analytics-service/tests/: conftest.py  test_schemas.py
services/chat-service/: .gitignore  Dockerfile  README.md  requirements.txt
services/chat-service/app/: main.py  redis_client.py  schemas.py
services/chat-service/tests/: conftest.py  test_schemas.py
services/desktop-app/: .gitignore  CMakeLists.txt  README.md  build.bat  build_template.bat
services/desktop-app/src/: analytics_window.cpp  analytics_window.h  api_client.cpp  api_client.h  app_config.cpp  app_config.h  app_config.h.in  chat_window.cpp  chat_window.h  document_window.cpp  document_window.h  edits_window.cpp  edits_window.h  init_document_window.cpp  init_document_window.h  main.cpp  main_window.cpp  main_window.h  navigation_bar.cpp  navigation_bar.h  session_state.h  settings_window.cpp  settings_window.h  window_manager.cpp  window_manager.h
services/frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
services/frontend/app/: layout.tsx  page.tsx
services/frontend/app/analytics/: page.tsx
services/frontend/app/chat/: page.tsx
services/frontend/app/document/: page.tsx
services/load-balancer/: Dockerfile  README.md  nginx.conf
services/text-service/: .gitignore  Dockerfile  README.md  requirements.txt
services/text-service/app/: database.py  main.py  models.py  operations.py  replication.py  schemas.py
services/text-service/tests/: conftest.py  test_operations.py
services/traefik/: dynamic.yml  dynamic.yml.template
